--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.5.3",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.2.0",
     "jquery": "^3.4.1",
